# nrf52840-blinky

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: nrf52-toolchain.cmake
src/: CMakeLists.txt  blinky.c
